Add projen as dep

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "type": "git",
     "url": "https://git-codecommit.us-east-1.amazonaws.com/v1/repos/boilerplate"
   },
-  "main": "./.projenrc.js",
   "scripts": {
     "build": "npx projen build",
     "bundle": "npx projen bundle",
@@ -48,6 +47,7 @@
     "jest-junit": "^13",
     "json-schema": "*",
     "npm-check-updates": "^16",
+    "projen": "*",
     "ts-jest": "*",
     "ts-node": "*",
     "typescript": "*"
