--- a/package.json
+++ b/package.json
@@ -33,29 +33,29 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "*",
+    "@types/jest": "^29.2.6",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2.1.0",
-    "esbuild": "*",
+    "esbuild": "^0.17.3",
     "eslint": "^8",
-    "eslint-import-resolver-node": "*",
-    "eslint-import-resolver-typescript": "*",
-    "eslint-plugin-import": "*",
-    "jest": "*",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.3.1",
     "jest-junit": "^13",
-    "json-schema": "*",
+    "json-schema": "^0.4.0",
     "npm-check-updates": "^16",
-    "projen": "*",
-    "ts-jest": "*",
-    "ts-node": "*",
-    "typescript": "*"
+    "projen": "^0.66.13",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
-    "projen": "*"
+    "projen": "^0.66.13"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
