--- a/package.json
+++ b/package.json
@@ -40,14 +40,17 @@
     "aws-cdk": "^2.1.0",
     "esbuild": "^0.17.3",
     "eslint": "^8",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
     "jest-junit": "^13",
     "json-schema": "^0.4.0",
     "npm-check-updates": "^16",
-    "projen": "^0.66.13",
+    "prettier": "^2.8.3",
+    "projen": "^0.67.9",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
@@ -55,7 +58,7 @@
   "dependencies": {
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
-    "projen": "^0.66.13"
+    "projen": "^0.67.9"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
