--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
+!/.github/workflows/pull-request-lint.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -33,17 +34,17 @@ jspm_packages/
 /test-reports/
 junit.xml
 /coverage/
-!/.prettierignore
-!/.prettierrc.json
+!/.github/workflows/build.yml
+/dist/changelog.md
+/dist/version.txt
+!/.github/workflows/release.yml
+!/.mergify.yml
+!/.github/workflows/upgrade-main.yml
+!/.github/pull_request_template.md
 !/test/
-!/tsconfig.json
 !/tsconfig.dev.json
 !/src/
-/lib
 /dist/
 !/.eslintrc.json
-/assets/
-!/cdk.json
-/cdk.out/
-.cdk.staging/
-.parcel-cache/
+tsconfig.json
+!/API.md
