--- a/.npmignore
+++ b/.npmignore
@@ -3,6 +3,10 @@
 /test-reports/
 junit.xml
 /coverage/
+permissions-backup.acl
+/dist/changelog.md
+/dist/version.txt
+/.mergify.yml
 /test/
 /tsconfig.dev.json
 /src/
@@ -17,6 +21,4 @@ dist
 /.projenrc.js
 tsconfig.tsbuildinfo
 /.eslintrc.json
-!/assets/
-cdk.out/
-.cdk.staging/
+!.jsii
