--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ junit.xml
 /coverage/
 /dist/changelog.md
 /dist/version.txt
+!/.prettierignore
+!/.prettierrc.json
 !/test/
 !/tsconfig.dev.json
 !/src/
