--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -258,19 +258,19 @@
           "exec": "npm update npm-check-updates"
         },
         {
-          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='@mrgrain/projen-from-git,aws-cdk-lib,constructs'"
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='@mrgrain/projen-from-git'"
         },
         {
-          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='@mrgrain/projen-from-git,aws-cdk-lib,constructs'"
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor --reject='@mrgrain/projen-from-git'"
         },
         {
-          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='@mrgrain/projen-from-git,aws-cdk-lib,constructs'"
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor --reject='@mrgrain/projen-from-git'"
         },
         {
-          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='@mrgrain/projen-from-git,aws-cdk-lib,constructs'"
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor --reject='@mrgrain/projen-from-git'"
         },
         {
-          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='@mrgrain/projen-from-git,aws-cdk-lib,constructs'"
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='@mrgrain/projen-from-git'"
         },
         {
           "exec": "npm install"
